--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.3.5",
