--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "chmod +x ./node_modules/.bin/vite"   // Add this line
   },
   "dependencies": {
     "aos": "^2.3.4",
